[gd_scene load_steps=33 format=3 uid="uid://d27chi846yccw"]

[ext_resource type="Texture2D" uid="uid://gfkqemsg4xfw" path="res://Sprites/Background/lantai bawah.jpg" id="1_iwbfb"]
[ext_resource type="Texture2D" uid="uid://by86b4xsevb1v" path="res://Sprites/dark.png" id="2_fruwq"]
[ext_resource type="PackedScene" uid="uid://btanw10j2puw" path="res://Characters/MC/main_character.tscn" id="2_imv5t"]
[ext_resource type="PackedScene" uid="uid://bwmhkvebg3qd7" path="res://Storyline/2_Main Room/subscenes/Door.tscn" id="3_x44p8"]
[ext_resource type="Texture2D" uid="uid://cxk2rq4wf7bs8" path="res://Sprites/lighting animasi/lighting_lantai_bawah_5.png" id="4_e8bg8"]
[ext_resource type="Script" path="res://Storyline/2_Main Room/scripts/MainCharacterLower.gd" id="4_juv2l"]
[ext_resource type="Texture2D" uid="uid://dp7p1a87qmu5r" path="res://Sprites/lighting animasi/lighting_lantai_bawah_0.png" id="4_xrcjp"]
[ext_resource type="Script" path="res://Storyline/2_Main Room/scripts/GoDoorGudang.gd" id="4_yywgd"]
[ext_resource type="FontFile" uid="uid://cjoe4k533onnt" path="res://Sprites/Font/NewTegomin-Regular.ttf" id="5_egu37"]
[ext_resource type="Script" path="res://Storyline/2_Main Room/scripts/Naik.gd" id="7_77qn6"]
[ext_resource type="Texture2D" uid="uid://brhnnc311i2mc" path="res://Sprites/Guide Icon/naik tangga/naik_0000.png" id="9_1tb0w"]
[ext_resource type="AudioStream" uid="uid://cck4jfw2a5koi" path="res://Sounds/Pop - guide icon.wav" id="10_0jnlb"]
[ext_resource type="Texture2D" uid="uid://r3k61iw08nyf" path="res://Sprites/Guide Icon/naik tangga/naik_0001.png" id="10_5y5qs"]
[ext_resource type="Script" path="res://Storyline/2_Main Room/scripts/DarkIn.gd" id="11_8w4t3"]
[ext_resource type="Texture2D" uid="uid://dxvq7ha07maey" path="res://Sprites/Guide Icon/naik tangga/naik_0002.png" id="11_kkvxh"]
[ext_resource type="Texture2D" uid="uid://dn00tjv1dhhbj" path="res://Sprites/Guide Icon/naik tangga/naik_0003.png" id="12_npj3g"]
[ext_resource type="Texture2D" uid="uid://cx25ulkbva4re" path="res://Sprites/Guide Icon/naik tangga/naik_0004.png" id="13_tb5ip"]
[ext_resource type="Texture2D" uid="uid://cqw2bbm4g8q8h" path="res://Sprites/Guide Icon/naik tangga/naik_0005.png" id="14_jqiqw"]
[ext_resource type="Texture2D" uid="uid://b0dm6klf20p3v" path="res://Sprites/Guide Icon/naik tangga/naik_0006.png" id="15_ew1f3"]
[ext_resource type="Texture2D" uid="uid://djh6f4dnvir0c" path="res://Sprites/Guide Icon/naik tangga/naik_0007.png" id="16_gghbe"]
[ext_resource type="Texture2D" uid="uid://1wrknikbioje" path="res://Sprites/Guide Icon/naik tangga/naik_0008.png" id="17_51kq5"]
[ext_resource type="Texture2D" uid="uid://bnmw4mdtruvpm" path="res://Sprites/Guide Icon/naik tangga/naik_0009.png" id="18_u3qgg"]
[ext_resource type="Texture2D" uid="uid://bylouphokir6p" path="res://Sprites/Guide Icon/naik tangga/naik_0010.png" id="19_7qml0"]
[ext_resource type="Texture2D" uid="uid://b056duqnaatre" path="res://Sprites/Guide Icon/naik tangga/naik_0011.png" id="20_b6lif"]
[ext_resource type="Texture2D" uid="uid://c5w1sm2mbym6a" path="res://Sprites/Guide Icon/naik tangga/naik_0012.png" id="21_1u17l"]
[ext_resource type="Texture2D" uid="uid://kkylcm7at74w" path="res://Sprites/Guide Icon/naik tangga/naik_0013.png" id="22_8xpus"]
[ext_resource type="Texture2D" uid="uid://cgyxdmwbd3m84" path="res://Sprites/Guide Icon/naik tangga/naik_0014.png" id="23_42hhr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ciuos"]
size = Vector2(5322, 351)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ynt2h"]
normal = Vector2(1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_27hj6"]
radius = 77.3175

[sub_resource type="SpriteFrames" id="SpriteFrames_uaiho"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_1tb0w")
}, {
"duration": 1.0,
"texture": ExtResource("10_5y5qs")
}, {
"duration": 1.0,
"texture": ExtResource("11_kkvxh")
}, {
"duration": 1.0,
"texture": ExtResource("12_npj3g")
}, {
"duration": 1.0,
"texture": ExtResource("13_tb5ip")
}, {
"duration": 1.0,
"texture": ExtResource("14_jqiqw")
}, {
"duration": 1.0,
"texture": ExtResource("15_ew1f3")
}, {
"duration": 1.0,
"texture": ExtResource("16_gghbe")
}, {
"duration": 1.0,
"texture": ExtResource("17_51kq5")
}, {
"duration": 1.0,
"texture": ExtResource("18_u3qgg")
}, {
"duration": 1.0,
"texture": ExtResource("19_7qml0")
}, {
"duration": 1.0,
"texture": ExtResource("20_b6lif")
}, {
"duration": 1.0,
"texture": ExtResource("21_1u17l")
}, {
"duration": 1.0,
"texture": ExtResource("23_42hhr")
}, {
"duration": 1.0,
"texture": ExtResource("22_8xpus")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_884v1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_e8bg8")
}, {
"duration": 1.0,
"texture": ExtResource("4_e8bg8")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_e8bg8")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_e8bg8")
}, {
"duration": 1.0,
"texture": ExtResource("4_e8bg8")
}, {
"duration": 1.0,
"texture": ExtResource("4_e8bg8")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrcjp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="LantaiBawah" type="Sprite2D" parent="."]
position = Vector2(2708, 520)
scale = Vector2(1, 1.04444)
texture = ExtResource("1_iwbfb")

[node name="Floor" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
position = Vector2(2711, 1279)
scale = Vector2(4.475, 0.627407)
texture = ExtResource("2_fruwq")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floor"]
visible = false
position = Vector2(2688, 1186.5)
shape = SubResource("RectangleShape2D_ciuos")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Floor"]
position = Vector2(2688, 1012)
rotation = -1.57079
shape = SubResource("WorldBoundaryShape2D_ynt2h")

[node name="LWall" type="StaticBody2D" parent="."]
position = Vector2(199, 0)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="LWall"]
position = Vector2(8, 635)
shape = SubResource("WorldBoundaryShape2D_ynt2h")

[node name="RWall" type="StaticBody2D" parent="."]
position = Vector2(-625, 0)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="RWall"]
position = Vector2(5409, 630)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_ynt2h")

[node name="Go_Door7" parent="." instance=ExtResource("3_x44p8")]
position = Vector2(913, 446)
script = ExtResource("4_yywgd")

[node name="TextEdit5" type="TextEdit" parent="."]
visible = false
offset_left = 1214.0
offset_top = 382.0
offset_right = 1569.0
offset_bottom = 556.0
theme_override_fonts/font = ExtResource("5_egu37")
theme_override_font_sizes/font_size = 20

[node name="MC" parent="." instance=ExtResource("2_imv5t")]
position = Vector2(2575, 517)
script = ExtResource("4_juv2l")

[node name="IconNaik" type="CharacterBody2D" parent="."]
position = Vector2(3142, 330)
script = ExtResource("7_77qn6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="IconNaik"]
position = Vector2(3, 2)
shape = SubResource("CircleShape2D_27hj6")

[node name="PopSound" type="AudioStreamPlayer2D" parent="IconNaik"]
unique_name_in_owner = true
stream = ExtResource("10_0jnlb")
bus = &"SFX"

[node name="Naik2" type="AnimatedSprite2D" parent="IconNaik"]
position = Vector2(-3, 12)
scale = Vector2(0.502, 0.468)
sprite_frames = SubResource("SpriteFrames_uaiho")
autoplay = "default"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(2700.5, 583)
scale = Vector2(1.0758, 1.246)
sprite_frames = SubResource("SpriteFrames_884v1")
autoplay = "default"
frame_progress = 0.770689

[node name="DarkIn" type="Sprite2D" parent="."]
position = Vector2(2573, 583)
scale = Vector2(4.71146, 1.85518)
texture = ExtResource("2_fruwq")
script = ExtResource("11_8w4t3")
